<resources>
    <string name="app_name">Beet</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>

    <string name="action_settings">something here</string>

    <string name="send_to">Send to...</string>
    <string name="perfil">Profile</string>
    <string name="slogan">Dont have a radish trip</string>
    <string name="slogan2">Beet, beet, beet travel with us!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Log in</string>
    <string name="hint_nacionality">Nacionality</string>
    <string name="hint_languages">Languages you speak</string>
    <string name="hint_email">Email</string>
    <string name="hint_live">Where do you live?</string>
    <string name="hint_time">Time</string>
    <string name="hint_date">From</string>
    <string name="hint_date2">To</string>
    <string name="hint_car">Car model</string>
    <string name="hint_carinsurance">Type of insurance</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_back">Back</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="txtAboutus">Hi, we are three Universidad Europea de Madrid (Villaviciosa) DAM students which have done this app for a project. We are so proud and we have learned a lot with these. Beet was made with Firebase and with Android Studio from 0. Maybe you will found some bugs, please understand this we made this App in two and a half months and we were finishing our Technical degree at the same time ♥</string>
    <string name="nombre_adrian">Adrian Canas Ramos</string>
    <string name="forgot_password_msg">Write your email, open it , wait for the message and click on the link for changing your pasword</string>
    <string name="nombre_morgado">Daniel Morgado Jara</string>
    <string name="nombre_marco">Marco Pérez Aranda</string>
    <string name="title_activity_signup">Register</string>


    <string name="search_activity">Search route</string>
    <string name="action_search">Search</string>
    <string name="action_send">Send</string>


    <!-- Strings contacto seleccionado -->
    <string name="selec_origen">Origin</string>
    <string name="selec_destino">Destination</string>
    <string name="selec_coche">Car</string>
    <string name="selec_seguro">Type of insurance</string>
    <string name="selec_nacionalidad">Nacionality</string>
    <string name="selec_idiomas">Languages</string>



    <!-- Strings crear ruta -->
    <string name="ruta_seguro">Insurance</string>
    <string name="boton_crear">Create Route</string>
    <string name="alerta_origen">Please enter origin address!</string>
    <string name="alerta_destino">Please enter destination address!</string>
    <string name="alerta_nuevaruta">Uploading a new route....</string>
    <string name="alerta_encontrar">Finding direction..!</string>
    <string name="alerta_esperar">Please wait.</string>
    <string name="alerta_hora">Select Time</string>
    <string name="alerta_fecha">Select Date</string>

    <!-- Strings terminos y condiciones -->
    <string name="terminos">Clicking register, you are accepting our Terms and Conditions</string>
    <string name="terminosycondiciones">We do not take any responsability on what happens to you with any driver or passenger. We also have access to the profile picture you upload (we are not going to use it, but we can see it because is stored in our Database), and we can also see your conversations with other passengers and drivers, and have access to the data you upload to the App. Also we reserve the right to cancel your account for any reason.</string>
    <string name="terminostitulo">Terms and Conditions</string>


    <!-- Strings navigation -->
    <string name="nav_crear">Create new route</string>
    <string name="nav_buscar">Search for a route</string>
    <string name="nav_mensajes">Messages</string>
    <string name="nav_perfil">Profile</string>
    <string name="nav_compartir">Share</string>
    <string name="nav_acercade">About us</string>
    <string name="nav_logout">Log out</string>
    <string name="alerta_compartir">Download Beet and lets go together to the university!</string>



    <!-- Strings Profile -->
    <string name="alerta_actualizar">You must log in again to see the changes</string>
    <string name="btn_actualizar">Update changes</string>


    <!-- Strings change pass -->
    <string name="alerta_cambioclave">We have sent you instructions to reset your password!</string>
    <string name="alerta_introduceemail">Enter your registered email id</string>
    <string name="alerta_falloemail">Failed to send reset email!</string>


    <!-- Strings Sign up -->
    <string name="alerta_nombre">Enter your name!</string>
    <string name="alerta_email">Enter email address!</string>
    <string name="alerta_clave">Enter password!</string>
    <string name="alerta_clavecorta">Password too short, enter minimum 6 characters!</string>
    <string name="alerta_usuariocreado">User created</string>
    <string name="alerta_vive">Enter where do you live!</string>
    <string name="alerta_idiomas">Enter your nacionality!</string>
    <string name="alerta_nacionalidad">Enter the languages you speak!</string>





    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup2">Sign in</string>
    <string name="title_activity_create_route_map">Map</string>
    <string name="title_activity_pagina_principal_rutas">PaginaPrincipalRutas</string>
    <string name="title_activity_search">Search route</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_pagina_principal_busqueda">PaginaPrincipalBusqueda</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>



    <string name="mensaje_bienvenida">Thank you for using Beet ♥</string>
    <string name="intro_mail">Enter email address!</string>
    <string name="intro_clave">Enter password!</string>


</resources>
