<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/fab_add"
            android:title="@string/nav_crear" />
        <item
            android:id="@+id/nav_myroutes"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_buscar" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/mensajesgris"
            android:title="@string/nav_mensajes" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/perfilgris"
            android:title="@string/nav_perfil" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_compartir" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_information"
                android:title="@string/nav_acercade" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/power"
                android:title="@string/nav_logout" />

        </menu>
    </item>

</menu>
