<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.application.travelue.SignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimarioOscuro"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="1">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/rabano" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintAnimationEnabled="true"
            android:textColorLink="@android:color/white" >

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/input_register"
                android:textColorLink="@android:color/white"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintAnimationEnabled="true"
            android:textColorLink="@android:color/white" >

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_surname"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/input_register"
                android:textColorLink="@android:color/white"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintAnimationEnabled="true"
            android:textColorLink="@android:color/white" >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/input_register"
                android:textColorLink="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintAnimationEnabled="true"
            android:textColorLink="@android:color/white" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/white" />



        </android.support.design.widget.TextInputLayout>
        <FrameLayout android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:text="@string/btn_link_to_back"
                android:id="@+id/btnBack"
                android:layout_gravity="bottom|left"
                style="@style/ButtonsSign" />

            <Button
                android:id="@+id/sign_up_button"
                style="@style/ButtonsSign"
                android:background="@color/colorAccent"
                android:text="@string/action_sign_in_short"
                android:layout_gravity="bottom|right" />

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/progressBar"
                android:layout_weight="0.27"
                android:layout_gravity="bottom|center" />


        </FrameLayout>

        <!-- Link to Login Screen -->

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>