<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.application.travelue.SignupActivity2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimarioOscuro"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="1">


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spEstado"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:textColorHint="@color/white"
            android:hint="@string/hint_time"
            android:textColor="@color/white"
            android:ems="10"
            android:id="@+id/etTime"
            android:focusable="false"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/hint_date"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:ems="10"
                android:id="@+id/etDate"
                android:focusable="false"
                android:layout_width="187dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/hint_date2"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:ems="10"
                android:id="@+id/etDate2"
                android:focusable="false"
                android:gravity="left" />


        </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintAnimationEnabled="true"
                android:textColorLink="@android:color/white">

                <EditText
                    android:id="@+id/etCar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_car"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/input_register"
                    android:textColorLink="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="right">

                    <ImageView
                        app:srcCompat="@drawable/nophoto"
                        android:id="@+id/ivNoPhotoCar"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:layout_marginRight="20dp"
                        android:layout_width="80dp"
                        android:layout_height="60dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab2"
                        app:srcCompat="@android:drawable/ic_dialog_email"
                        app:backgroundTint="@android:color/holo_red_dark"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:layout_width="100dp"
                        android:layout_marginTop="30dp"
                        android:layout_height="40dp" />


                </FrameLayout>

            </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintAnimationEnabled="true"
            android:textColorLink="@android:color/white" >

            <EditText
                android:id="@+id/etCarInsurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_carinsurance"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/input_register"
                android:textColorLink="@android:color/white" />

        </android.support.design.widget.TextInputLayout>


        <FrameLayout android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_weight="1"
                android:layout_gravity="bottom|center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/btn_link_to_back"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnBack"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:layout_marginRight="30dp" />

                <Button
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:background="@drawable/shape"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right" />

            </LinearLayout>


        </FrameLayout>

    </LinearLayout>
    <!-- Link to Login Screen -->


</android.support.design.widget.CoordinatorLayout>